--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -26,14 +26,7 @@
                 <% CategorySale.where(category_id: p.category_id).each do |s| %>
                   <% if s.percent_off > 1 %>
                     <% price = (p.price.to_f) * ((100-s.percent_off)/100) %>
-                      <% if (price.to_f - price.to_i) == 0 %>
-                        <center><h4 class="pad" style="color: red"><%= "Sales Price! $ #{price.to_i}.00" %></h4></center>
-                          <% elsif (price.to_f - price.to_i) == 0.1 or 0.2 or 0.3 or 0.4 or 0.5 or
-                             0.6 or 0.7 or 0.8 or 0.9 %>
-                              <center><h4 class="pad" style="color: red"><%= "Sales Price! $ #{price.round(1)}0" %></h4></center>
-                      <% else %>
-                            <center><h4 class="pad" style="color: red"><%= "Sales Price! $ #{price.round(2)}" %></h4></center>
-                      <% end %>
+                        <center><h4 class="pad" style="color: red"><%= "Sales Price! $ #{"%.2f" % price}" %></h4></center>
                     <% else %>
                   <% end %>
                         <h4><p><center><%= p.description %></p></h4></center>
