--- a/app/views/main/edit_old.html.erb
+++ b/app/views/main/edit_old.html.erb
@@ -1,37 +1,42 @@
-<%= label_tag "product_code", "product_code" %><br>
-      <%= select_tag "product_code", options_from_collection_for_select(
-      Product.order(:id), :id :product_code), prompt: "Choose product..." %>
+<% if @error != nil %>
+  <h2 style="color: red"><%= @error %></h2>
+<% end %>
 
+<h2 style="color: blue"><%= label_tag "product_code", "Select the product to edit" %><br><h2>
+  <%= select_tag "id", options_from_collection_for_select(
+      Product.order(:id), :id, :product_code, @old_product.id), 
+      prompt: "Choose product, then click edit" %>
+        <%= submit_tag "Select", size: 20 %><br>
+<hr style="color: blue">
+      
 <div class="pad">
-  <h2> Edit Existing Product </h2>
 <div class="row">
-  <div class="col-md-3">
+  <div class="col-md-4">
     <h3>
       <%= label_tag "category", "Product Category" %><br>
       <%= select_tag "category", options_for_select([
       "Diamond Products", "Safety Equipment", "Sand Paper", "Glues & Sealer",
-      "Wet & Dry Pads", "Other Products"]), prompt: "Choose product category..." %><br></br>
+      "Wet & Dry Pads", "Other Products"], @old_product.category), prompt: "Choose product category..." %><br></br>
+
   
       <%= label_tag "product_code", "Product Code" %><br>
-      <%= text_field_tag "product_code", "", size: 20 %><br></br>
+      <%= text_field_tag "product_code", @old_product.product_code, size: 20 %><br></br>
 
       <%= label_tag "name", "Name" %><br>
-      <%= text_field_tag "name", @old_product, size: 20 %><br></br>     
+      <%= text_field_tag "name", @old_product.name, size: 20 %><br></br>     
     </h3>
   </div>
   <div class="col-md-3">
     <h3>
       <%= label_tag "quantity", "Quantity" %><br>
-      <%= text_field_tag "quantity", @old_product, size: 20 %><br></br>
+      <%= text_field_tag "quantity", @old_product.quantity, size: 20 %><br></br>
       
       <%= label_tag "description", "Description" %><br>
-      <%= text_area_tag "description", @old_product, size: 20 %><br></br>
+      <%= text_area_tag "description", @old_product.description, size: 20 %><br></br>
 
       <%= label_tag "price", "Price" %><br>
-      <%= text_field_tag "price", @old_product, size: 20 %><br></br>
-  </div>
-  <div class="col-md-3">
-      <%= submit_tag "Submit", size: 40 %>
+      <%= text_field_tag "price", @old_product.price, size: 20 %><br></br>
+      <%= submit_tag "Update", size: 40 %>
     </h3>  
   </div> 
 </div>
