--- a/app/views/to_do.html.erb
+++ b/app/views/to_do.html.erb
@@ -1,6 +1,9 @@
+
+
 To Do
 ?
 - put a single product on sale  
+- change images to lower resolution and fix back click
 - make subcategories on the product table
 _create a profile page where user can change password
 - have links for sub-categories (RED) on left
