ATSrails_ created a partial for button in layout

--- a/app/views/to_do.html.erb
+++ b/app/views/to_do.html.erb
@@ -1,19 +1,16 @@
 
 
 To Do
-?
-- put a single product on sale  
-- change images to lower resolution and fix back click
-- make subcategories on the product table
+- set up login link
+
 _create a profile page where user can change password
 - have links for sub-categories (RED) on left
 -   - create new column in product table
+
 - To think about
+- put a single product on sale  
   - sales flyer link
-  - 
-
- - are hyphens all right in file names?
-
+- make subcategories on the product table
 work some more on error messages so that they display the fields that didn't get filled out
 
 index.html.erb 
@@ -23,7 +20,7 @@ index.html.erb
 set up product on sale
 
 IMAGES
-  -get some pictures for diamond products
+
   -add picture to shop to the contact and/or about us page
   
 MISC  
