--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <title>App</title>
   <link rel="stylesheet" type="text/css" href="/stylesheets/ats.css">
@@ -8,41 +7,26 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
-
-   
+    <body class: "body_b">
       <nav class="navbar navbar-inverse" role="navigation">
         <p class="ats_header">Action Tool & Supply</p>   
           <form class="navbar-form navbar-left">
-            <div class="form-group">
-              <a class="btn btn-danger" href='/'>Home</a>
-              <a class="btn btn-primary" href='/Diamond Products'>Diamond Products</a>
-              <a class="btn btn-primary" href='/Safety Equipment'>Safety Equipment</a>
-              <a class="btn btn-primary" href='/Sand Paper'>Sand Paper</a>
-              <a class="btn btn-primary" href='/Glues & Sealer'>Glues & Sealer</a>
-              <a class="btn btn-primary" href='/Wet & Dry Pads'>Wet & Dry Pads</a>
-              <a class="btn btn-primary" href='/Other Products'>Other Products</a>
-              <a class="btn btn-info" href='/about'>About</a>
-              <a class="btn btn-default" href='/contact'>Contact Us</a>
-            </div>   
+            <%= render partial: "layouts/button" %>
           </form>
       </nav>  
-  </head>  
-     <body class: "body_b">
-    <% if flash[:error] != nil %>
-      <div class="alert alert-danger">
-        <%= flash[:error] %>
-      </div>
-    <% end %>
-    
-    <%# non-block form is needed to adapt Rails form helpers to Sinatra %>
-    <%# request.path_info means POST action should be same as the GET URL %>
-    <%= form_tag request.path_info %>
+</head>  
+      <% if flash[:error] != nil %>
+        <div class="alert alert-danger">
+          <%= flash[:error] %>
+        </div>
+      <% end %>
 
-<%= yield %>
+      <%# non-block form is needed to adapt Rails form helpers to Sinatra %>
+      <%# request.path_info means POST action should be same as the GET URL %>
+      <%= form_tag request.path_info %>
 
-    </form>
-        
-       
+      <%= yield %>
+
       <nav class="navbar navbar-default navbar-static-bottom" role="navigation">
         <p class="ats_footer">720-363-0163 &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp ats.biz@live.com  &nbsp &nbsp &nbsp &nbsp &nbsp 50 Rio Grande Blvd, Denver CO</p>
       </nav>
