--- a/public/stylesheets/ats.css
+++ b/public/stylesheets/ats.css
@@ -101,3 +101,17 @@ html {
   font-family: sans-serif;
   font-size: 16pt;
 }
+
+.back_gray {
+  background-color: rgba(214, 211, 211, 0.12);
+}
+link_banner {
+  font-size: 10pt;
+  margin: 0px auto -2px auto;
+  text-align: left;
+  color: white;
+  background-color: rgb(189, 14, 14);
+  height: 1000px;
+  padding: 2px 0px 5px 10px;
+  text-shadow: 5px 5px 10px red;
+}
