--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,19 +9,14 @@
   <%= csrf_meta_tags %>
   <body class:"body_b">
       <nav class="navbar navbar-inverse" role="navigation">
-      <a class="pull-right pad" href="/log_out"><h3>Log out</h3></a>
-      <a class="pull-right pad" href="/sign_in"><h3>Sign in</h3></a>
-   
+        <a class="pull-right pad" href="/log_out"><h3 style="text-shadow: 2px 2px 5px red">Log out</h3></a>
+        <a class="pull-right pad" href="/sign_in"><h3 style="text-shadow: 2px 2px 5px gray">Sign in</h3></a>
         <p class="ats_header">Action Tool & Supply</p>
-         
-            <form class="navbar-form navbar-right"> 
-             
-            <form class="navbar-form navbar-left">
-              <%= render partial: "layouts/button" %>
-            </form>
-            
-            </form>
-            
+          <form class="navbar-form navbar-right"> 
+          <form class="navbar-form navbar-left">
+            <%= render partial: "layouts/button" %>
+          </form>
+          </form> 
       </nav>  
 </head> 
   <body class="back_gray"> 
