ATSrails_Removed Turbolinks gem to fix the with browser back button problems on zoomed images. Also, added timestamp column to tables.

--- a/app/views/layouts/_admin_edit.html.erb
+++ b/app/views/layouts/_admin_edit.html.erb
@@ -7,6 +7,9 @@
   <body style="background-color: rgb(189, 14, 14)">
 
 
+<%# non-block form is needed to adapt Rails form helpers to Sinatra %>
+      <%# request.path_info means POST action should be same as the GET URL %>
+      <%= form_tag request.path_info %>
 
 <% yield %>
 
