--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -2,10 +2,10 @@
   <%= @header %>
 </div>
 
-<div class="link-banner pull-left">
+<!--<div class="link-banner pull-left">
   <th><a style="color: white" href="/">Sales Flyer</a></th><br>
   <th><a style="color: white" href="/">Articles</a></th><br>
-</div>
+</div>--!>
 
 <div pull-right>
 <div class="pad_col row">
