--- a/app/views/layouts/_admin.html.erb
+++ b/app/views/layouts/_admin.html.erb
@@ -6,6 +6,9 @@
 </head>
   <body style="background-color: rgb(253, 102, 52)">
 
+<%# non-block form is needed to adapt Rails form helpers to Sinatra %>
+      <%# request.path_info means POST action should be same as the GET URL %>
+      <%= form_tag request.path_info %>
 
 
 <% yield %>
