ATSrails_created routes for sign in and create account links

--- a/app/views/main/login.html.erb
+++ b/app/views/main/login.html.erb
@@ -13,9 +13,9 @@
     </h3>
   </div>
     </div> 
+      </h3>  
       <%= submit_tag "Sign in", size: 40 %>
-    </h3>  
-
+      <%= submit_tag "Create account", size: 40 %>
 </div>
 </div>
 
