--- a/app/views/main/sign_in.html.erb
+++ b/app/views/main/sign_in.html.erb
@@ -14,8 +14,10 @@
   </div>
     </div> 
       </h3>  
+      
       <%= submit_tag "Sign in", size: 40 %>
       <%= submit_tag "Create account", size: 40 %>
 </div>
 </div>
 
+<h4>(Testing: username: ts9753 password: ts9753, username: kl9753 password: *kl9753)</h4>
