ATSrails_added form_tag routes to each individual view file

--- a/app/views/layouts/_admin.html.erb
+++ b/app/views/layouts/_admin.html.erb
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="/stylesheets/ats.css">
 <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.css">
 </head>
-  <body style="background-color: rgb(253, 102, 52)">
+  <body style="background-color: silver">
 
 <%# non-block form is needed to adapt Rails form helpers to Sinatra %>
       <%# request.path_info means POST action should be same as the GET URL %>
