--- a/app/views/layouts/_admin_edit.html.erb
+++ b/app/views/layouts/_admin_edit.html.erb
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="/stylesheets/ats.css">
 <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.css">
 </head>
-  <body style="background-color: rgb(189, 14, 14)">
+  <body style="background-color: rgba(145, 189, 238, 0.73)">
 
 
 <%# non-block form is needed to adapt Rails form helpers to Sinatra %>
