--- a/app/views/main/add_new.html.erb
+++ b/app/views/main/add_new.html.erb
@@ -1,3 +1,4 @@
+<%= form_tag "/add_new" do %>
 <%= render "layouts/admin" %>
 
 <% if @error != nil %>
@@ -41,4 +42,5 @@
       </div>
     </div>
 </div>
+<% end %>
 
