--- a/app/views/main/more_info.html.erb
+++ b/app/views/main/more_info.html.erb
@@ -1,4 +1,4 @@
-
+<%= form_tag "/more_info" do %>
 <center><h2 style="color: black"><%= @header %></h2></center>
 
 <div class="pad_col">
@@ -31,3 +31,5 @@
     </div>         
   </div>
 </div>
+
+<% end %>
