--- a/app/views/main/sign_in.html.erb
+++ b/app/views/main/sign_in.html.erb
@@ -1,4 +1,5 @@
 
+<%= form_tag "/sign_in" do %>
 
 <div class="pad">
   <h2> Login </h2>
@@ -21,3 +22,5 @@
 </div>
 
 <h4>(Testing: username: ts9753 password: ts9753, username: kl9753 password: *kl9753)</h4>
+
+<% end %>
