--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,9 @@
     <%= flash_alert "warning" %>
     <%= flash_alert "danger" %>
 
-    <%# non-block form is needed to adapt Rails form helpers to Sinatra %>
+  <!--  <%# non-block form is needed to adapt Rails form helpers to Sinatra %>
     <%# request.path_info means POST action should be same as the GET URL %>
-    <%= form_tag request.path_info %>
+    <%= form_tag request.path_info %>   --!>
 
     <%= yield %>
 
