--- a/app/views/main/category_sale.html.erb
+++ b/app/views/main/category_sale.html.erb
@@ -1,4 +1,4 @@
-
+<%= form_tag "/category_sale" do %>
 <% if @error != nil %>
   <h2 style="color: blue"><%= @error %></h2>
 <% end %>
@@ -20,3 +20,4 @@
   </div> 
 </div>
 </div>
+<% end %>
