--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,4 @@
+<%= form_tag "/index" do %>
 <div class="row">
   <center>
     <div class="col-md-10">
@@ -16,3 +17,4 @@
   <h3 style="color: red">50 Rio Grande Blvd, Denver CO</h3>
   <h4>Or call Jack at 720-363-0163</h4>
 </center>
+<% end %>
