--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -1,3 +1,5 @@
+<%= form_tag "/show" do %>
+
 <div class="ats_header_b">
   <%= @header %>
 </div>
@@ -39,3 +41,4 @@
 <% end %>
 </div>
 </div>
+<% end %>
