--- a/app/views/main/new_user.html.erb
+++ b/app/views/main/new_user.html.erb
@@ -25,4 +25,5 @@
   </div> 
 </div>
 </div>
+<h4>(Testing existing users: username: ts9753 password: ts9753, username: kl9753 password: *kl9753)</h4>
 <% end %>
