--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -19,7 +19,7 @@
         <img src="/images/<%= p.image %>.jpg/" width="150" height="150"></img>
       </a>
     </th>
-      <td><b><h3 class="pad" style="color: rgb(9, 9, 158)")"><%= p.name.upcase %></h3></b>
+      <td><b><h3 class="pad" style="color: #550808"><%= p.name.upcase %></h3></b>
         <b><center><p style="color=black"><i>price  </i>$<%= p.price %></p></center></b>
           <% CategorySale.where(category_id: p.category_id).each do |s| %>
             <% if s.percent_off > 1 %>
@@ -32,7 +32,7 @@
                   <% else %>
                 <% end %>
             <% end %>
-        <h4><p><center><%= p.description %></p></h4></center>
+        <h4 style="color: #927017"><p><center><%= p.description %></p></h4></center>
         <a href="/more_info/<%= p.id %>">More details and applications...</a>
       </td>
           <% end %>   
