--- a/app/views/new_user/new_user.html.erb
+++ b/app/views/new_user/new_user.html.erb
@@ -25,5 +25,5 @@
   </div> 
 </div>
 </div>
-<h4>(Testing Existing Information: username: wendy password: 1234 email: 1234@yahoo.com)</h4>
+<h4>(Testing existing users: username: ts9753 password: ts9753, username: kl9753 password: *kl9753)</h4>
 <% end %>
