ATSrails_minor style changes

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,7 +1,7 @@
 <%= form_tag "/index" do %>
 <div class="row">
   <center>
-    <div class="col-md-10">
+    <div class="col-md-12">
       <h1><p class="shadow_big">On Sale This Month</p1></h1>
   </center>
     </div>
@@ -14,7 +14,7 @@
 <center>
   <h3 class="shadow">Come visit our showroom to view our selection of sinks,<br>
      stone tools and supplies at:</h3>
-  <h3 style="color: red">50 Rio Grande Blvd, Denver CO</h3>
+  <h3 style="color: #550808">50 Rio Grande Blvd, Denver CO</h3>
   <h4>Or call Jack at 720-363-0163</h4>
 </center>
 <% end %>
