--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -33,7 +33,7 @@
                 <% end %>
             <% end %>
         <h4 style="color: #927017"><p><center><%= p.description %></p></h4></center>
-        <a href="/more_info/<%= p.id %>">More details and applications...</a>
+        <h5><a href="/more_info/<%= p.id %>">More details and applications...</a></h5>
       </td>
           <% end %>   
   </table>             
