--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -5,7 +5,7 @@ body {
   width: 100000px;
   margin: 5px auto;
   background-color: gray;
-  border: 1px #ccc solid;
+  border: 1px black solid;
   padding: 5px;
   font-family: sans-serif;
   font-size: 16pt;
