--- a/app/views/layouts/_nav_header.erb
+++ b/app/views/layouts/_nav_header.erb
@@ -1,8 +1,9 @@
+<body class="body_b">
 <nav class="navbar navbar-inverse" role="navigation">
-  <a class="pull-right pad" href="/log_out"><h3 style="text-shadow: 2px 2px 3px red">Log out</h3></a>
-  <a class="pull-right pad" href="/sign_in"><h3 style="text-shadow: 2px 2px 3px white">Sign in</h3></a>
+  <a class="pull-right pad" href="/log_out"><h4 style="color: white">Log out</h4></a>
+  <a class="pull-right pad" href="/sign_in"><h4 style="color: white">Sign in</h4></a>
     <% if session[:user_name] != nil %>
-    <a class="pull-right pad" href="/edit_user"><b>update <%= session[:user_name]%>'s info</b></a>
+    <a class="pull-right pad" href="/edit_user"><p  style="color: white"><%= session[:user_name]%></p></a>
     <% end %>
   <p class="ats_header">Action Tool & Supply</p>
     <form class="navbar-form navbar-right"> 
