--- a/app/views/layouts/_button.html.erb
+++ b/app/views/layouts/_button.html.erb
@@ -1,8 +1,15 @@
+<div pull-left>
+<div class="pad_col row">
+<div class="col-md-12">
 <div class="form-group">
-    <a class="btn btn-danger" href='/'>Home</a>
   <% Category.order(:id).each do |c| %>
     <a class="btn btn-primary" href='/<%= c.name %>'><%= c.name %></a>
   <% end %>
+
+    <a class="btn btn-danger" href='/'>Home</a>
     <a class="btn btn-info" href='/about'>About</a>
     <a class="btn btn-default" href='/contact'>Contact Us</a>
-</div>   
+</div>  
+</div>
+</div>
+</div>
