--- a/app/views/main/edit_user.html.erb
+++ b/app/views/main/edit_user.html.erb
@@ -9,7 +9,7 @@
 <div class="pad">
 <div class="row">
   <div class="col-md-4" style="color: rgba(51, 51, 51, 0.67)">
-    <h3>
+    <h3 style="color: #1E5A53">
     
       <%= label_tag "username", "Edit username (optional)" %><br>
       <%= text_field_tag "username", @old_user.username, size: 20 %></i><br></br>
@@ -18,7 +18,7 @@
     </h3>
   </div>
   <div class="col-md-4" style="color: rgba(51, 51, 51, 0.67)">
-    <h3>
+    <h3 style="color: #1E5A53">
       <%= label_tag "password", "New password" %><br>
       <%= password_field_tag "password", "", size: 20 %><br></br>     
       
