--- a/app/views/layouts/_nav_header.erb
+++ b/app/views/layouts/_nav_header.erb
@@ -1,9 +1,9 @@
 <body class="body_b">
 <nav class="navbar navbar-inverse" role="navigation">
-  <a class="pull-right pad" href="/log_out"><h4 style="color: white">Log out</h4></a>
-  <a class="pull-right pad" href="/sign_in"><h4 style="color: white">Sign in</h4></a>
+  <a class="pull-right pad" href="/user/logout"><h4 style="color: white">Log out</h4></a>
+  <a class="pull-right pad" href="/user"><h4 style="color: white">Sign in</h4></a>
     <% if session[:user_name] != nil %>
-    <a class="pull-right pad" href="/edit_user"><p  style="color: white"><%= session[:user_name]%></p></a>
+    <a class="pull-right pad" href="/user/:id/edit"><p  style="color: white"><%= session[:user_name]%></p></a>
     <% end %>
   <p class="ats_header">Action Tool & Supply</p>
     <form class="navbar-form navbar-right"> 
