--- a/app/views/admin/product_sale.html.erb
+++ b/app/views/admin/product_sale.html.erb
@@ -1,4 +1,5 @@
-<%= form_tag "/product_sale" do %>
+<%= render partial: "layouts/admin_edit" %>
+<%= form_tag "/admin/product_sale" do %>
 <% if @error != nil %>
   <h2 style="color: blue"><%= @error %></h2>
 <% end %>
