--- a/app/views/layouts/_admin.html.erb
+++ b/app/views/layouts/_admin.html.erb
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="/stylesheets/ats.css">
 <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.css">
 </head>
-  <body style="background-color: silver">
+  <body class="admin">
 
   <% yield %>
 
