--- a/app/views/layouts/_admin_edit.html.erb
+++ b/app/views/layouts/_admin_edit.html.erb
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="/stylesheets/ats.css">
 <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.css">
 </head>
-  <body style="background-color: rgba(159, 218, 241, 0.49)">
+  <body class="admin">
 
   <% yield %>
 
