--- a/app/views/layouts/_index_product.html.erb
+++ b/app/views/layouts/_index_product.html.erb
@@ -7,7 +7,7 @@
             <td class="pad_left"><h2 style="color: black"><%= p.name %></h2>
               <p style="color: gray"><i>regular price $<%= "%.2f" % p.price %></i></p>
               <h4 class="pad" style="color: red"><%= "Sales Price! $ #{"%.2f" % price}" %></h4>
-              <a href="/more_info/<%= p.id %>">More details and applications...</a> 
+              <a href="/main/more_info/<%= p.id %>">More details and applications...</a> 
               <a class="a:hover" href='/images/<%= p.image %>.jpg/'>
               <img src="/images/<%= p.image %>.jpg/" width="150" height="150"></img></a>
             </td>
@@ -21,7 +21,7 @@
                   <td class="pad_left"><h2 style="color: black"><%= p.name %></h2>
                     <p style="color: gray"><i>regular price $<%= "%.2f" % p.price %></i></p>
                     <h4 class="pad" style="color: red"><%= "Sales Price! $ #{"%.2f" % price}" %></h4>
-                    <a href="/more_info/<%= p.id %>">More details and applications...</a> 
+                    <a href="/main/more_info/<%= p.id %>">More details and applications...</a> 
                     <a class="a:hover" href='/images/<%= p.image %>.jpg/'>
                     <img src="/images/<%= p.image %>.jpg/" width="150" height="150"></img></a></td>
                 </table>
