--- a/app/views/main/contact.html.erb
+++ b/app/views/main/contact.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag "/contact" do %>
+<%= form_tag "/main/contact" do %>
 <center>
   <h3>We are located at:</h3>
   <h3 style="color: black">50 Rio Grande Blvd, Denver CO</h3>
