--- a/app/views/main/more_info.html.erb
+++ b/app/views/main/more_info.html.erb
@@ -1,6 +1,5 @@
-<%= form_tag "/more_info" do %>
+<%= form_tag "/main/more_info" do %>
 <center><h2 style="color: black"><%= @header %></h2></center>
-
 <div class="pad_col">
   <div class="row">
     <div class="col-md-12">
@@ -15,17 +14,16 @@
               <h4 class="pad" style="color=black"><i>price  </i>$<%= "%.2f" % @product.price %></h4>
                 <% CategorySale.where(category_id: @product.category_id).each do |s| %>
                   <% if s.percent_off > 1 %>
-                    <% price = (@product.price.to_f) * ((100-s.percent_off)/100) %>
-                      <h4 class="pad" style="color: red"><%= "Sales Price! $ #{"%.2f" % price.to_i}" %></h4>
-                        <% else %>
-                            <% if @product.percent_off > 1 %>
-                              <% price = (@product.price.to_f) * ((100-s.percent_off)/100) %>
-                              <h4 class="pad" style="color: red"><%= "Sales Price! $ #{"%.2f" % price.to_i}" %></h4>
-                                <% else %>
-                            <% end %>
+                    <% price = (@product.price) * ((100-s.percent_off)/100) %>
+                      <h4 class="pad" style="color: red"><%= "Sales Price! $ #{"%.2f" % price}" %></h4>
+                  <% else %>
+                    <% if @product.percent_off > 1 %>
+                      <% price = (@product.price) * ((100-@product.percent_off)/100) %>
+                      <h4 class="pad" style="color: red"><%= "Sales Price! $ #{"%.2f" % price}" %></h4>
+                    <% end %>
                   <% end %>
                 <% end %>
-            <h4 class="pad"><%= @product.description %></h4>
+              <h4 class="pad"><%= @product.description %></h4>
           </td>
       </table>             
     </div>         
