--- a/app/views/layouts/_nav_header.erb
+++ b/app/views/layouts/_nav_header.erb
@@ -2,8 +2,8 @@
 <nav class="navbar navbar-inverse" role="navigation">
   <a class="pull-right pad" href="/user/logout"><h4 style="color: white">Log out</h4></a>
   <a class="pull-right pad" href="/user"><h4 style="color: white">Sign in</h4></a>
-    <% if session[:user_name] != nil %>
-    <a class="pull-right pad" href="/user/:id/edit"><p  style="color: white"><%= session[:user_name]%></p></a>
+    <% if session[:username] != nil %>
+    <a class="pull-right pad" href="/user/:id/edit"><p  style="color: white"><%= session[:username]%></p></a>
     <% end %>
   <p class="ats_header">Action Tool & Supply</p>
     <form class="navbar-form navbar-right"> 
