ATSrails_added "delete product" submit tag to the user's edit view

--- a/app/views/admin/edit.html.erb
+++ b/app/views/admin/edit.html.erb
@@ -41,7 +41,8 @@
 
       <%= label_tag "price", "Price" %><br>
       <%= text_field_tag "price", @old_product.price, size: 20 %><br></br>
-      <%= submit_tag "Update", size: 40 %>
+      <%= submit_tag "Update" %>
+      <%= submit_tag "Delete" %>
     </h3>  
   </div> 
 </div>
