ATSrails_changed nav bar button css class after heroku testing

--- a/app/views/layouts/_button.html.erb
+++ b/app/views/layouts/_button.html.erb
@@ -1,5 +1,5 @@
 <div pull-left>
-<div class="pad_col row">
+<div class="row">
 <div class="col-md-12">
 <div class="form-group">
   <% Category.order(:id).each do |c| %>
