--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,2 +1,24 @@
 <%= render partial: "layouts/admin_edit" %>
-<h1>this is the admin sign on page</h1>
+
+<%= form_tag admin_signedin_path do %>
+
+<div class="pad">
+<div class="row">
+  <div class="col-md-6">
+  <h4> Enter username and password </h4>
+    <h3>
+      <%= label_tag "username", "" %><br>
+      <%= text_field_tag "username", "", size: 20 %><br>
+
+      <%= label_tag "password", "" %><br>
+      <%= password_field_tag %> 
+    </h3>
+  </div>
+    </div> 
+      </h3>  
+      
+      <%= submit_tag "Sign in", size: 40 %>
+</div>
+</div>
+
+<% end %>
