--- a/app/views/layouts/_admin_edit.html.erb
+++ b/app/views/layouts/_admin_edit.html.erb
@@ -6,6 +6,8 @@
 </head>
   <body class="admin">
 
+<a class="pull-right pad" href="/admin/logout"><h4 style="color: white">Log out</h4></a>
+  
   <% yield %>
 
   </body>
