--- a/app/views/layouts/_nav_header.erb
+++ b/app/views/layouts/_nav_header.erb
@@ -3,7 +3,8 @@
   <a class="pull-right pad" href="/user/logout"><h4 style="color: white">Log out</h4></a>
   <a class="pull-right pad" href="/user"><h4 style="color: white">Sign in</h4></a>
     <% if session[:username] != nil %>
-    <a class="pull-right pad" href="/user/:id/edit"><p  style="color: white"><%= session[:username]%></p></a>
+    <a class="pull-right pad" href="/user/:id/edit"><u style="color: beige">
+    <%= session[:username]%></u></a>
     <% end %>
   <p class="ats_header">Action Tool & Supply</p>
     <form class="navbar-form navbar-right"> 
