ATSrails_user ship and bill info view, first commit

--- a/app/views/user/edit.html.erb
+++ b/app/views/user/edit.html.erb
@@ -8,8 +8,8 @@
 <hr style="color: white">   
 <div class="pad">
 <div class="row">
-  <div class="col-md-4" style="color: rgba(51, 51, 51, 0.67)">
-    <h3 style="color: #1E5A53">
+  <div class="col-md-4">
+    <h3 style="color: rgba(3, 3, 100, 0.8)">
     
       <%= label_tag "username", "Edit username (optional)" %><br>
       <%= text_field_tag "username", @old_user.username, size: 20 %></i><br></br>
@@ -17,8 +17,8 @@
     
     </h3>
   </div>
-  <div class="col-md-4" style="color: rgba(51, 51, 51, 0.67)">
-    <h3 style="color: #1E5A53">
+  <div class="col-md-4">
+    <h3 style="color: rgba(3, 3, 100, 0.8)">
       <%= label_tag "password", "New password" %><br>
       <%= password_field_tag "password", "", size: 20 %><br></br>     
       
