--- a/app/views/user/ship_bill_info.html.erb
+++ b/app/views/user/ship_bill_info.html.erb
@@ -9,31 +9,33 @@
     <h4 style="color: rgba(3, 3, 100, 0.8)">
       <i>Please enter shipping information...</i><br>
         <%= label_tag "shipping_first_name", "First name" %><br>
-        <%= text_field_tag "shipping_first_name", @user.shipping_first_name, size: 20 %></i><br></br>
+        <%= text_field_tag "shipping_first_name", @user.shipping_first_name, size: 20 %><br></br>
       
         <%= label_tag "shipping_last_name", "Last name" %><br>
-        <%= text_field_tag "shipping_last_name", @user.shipping_last_name, size: 20 %></i><br></br>
+        <%= text_field_tag "shipping_last_name", @user.shipping_last_name, size: 20 %><br></br>
       
         <%= label_tag "shipping_address1", "Street address" %><br>
-        <%= text_field_tag "shipping_address1", @user.shipping_address1, size: 20 %></i><br></br>
+        <%= text_field_tag "shipping_address1", @user.shipping_address1, size: 20 %><br></br>
       
         <%= label_tag "shipping_address2", "Street address (continued)" %><br>
-        <%= text_field_tag "shipping_address2", @user.shipping_address2, size: 20 %></i><br></br>
+        <%= text_field_tag "shipping_address2", @user.shipping_address2, size: 20 %><br></br>
       
         <%= label_tag "shipping_city", "City" %><br>
-        <%= text_field_tag "shipping_city", @user.shipping_city, size: 20 %></i><br></br>
+        <%= text_field_tag "shipping_city", @user.shipping_city, size: 20 %><br></br>
         
-        TO DO - State drop down select <br><br>
+        <%= label_tag "shipping_state", "State" %><br>
+        <%= select_tag :shipping_state, options_for_select(us_states, @user.billing_state) %><br></br>
       
         <%= label_tag "shipping_zip", "Zip Code" %><br>
-        <%= text_field_tag "shipping_zip", @user.shipping_zip, size: 20 %></i><br></br>
+        <%= text_field_tag "shipping_zip", @user.shipping_zip, size: 20 %><br></br>
       
         <%= label_tag "shipping_phone_number", "Phone number" %><br>
-        <%= text_field_tag "shipping_phone_number", @user.shipping_phone_number, size: 20 %></i><br></br>
+        <%= text_field_tag "shipping_phone_number", @user.shipping_phone_number, size: 20 %><br></br>
     </h4> 
   </div>
     
   <div class="col-md-1">
+
     <h6>TO DO: check box for... Is billing info the same as shipping info</h6><br>
   </div>
 
@@ -41,27 +43,28 @@
     <h4 style="color: #550808">
       <i>Please enter billing information...</i><br>
         <%= label_tag "billing_first_name", "First name" %><br>
-        <%= text_field_tag "billing_first_name", @user.billing_first_name, size: 20 %></i><br></br>
+        <%= text_field_tag "billing_first_name", @user.billing_first_name, size: 20 %><br></br>
       
         <%= label_tag "billing_last_name", "Last name" %><br>
-        <%= text_field_tag "billing_last_name", @user.billing_last_name, size: 20 %></i><br></br>
+        <%= text_field_tag "billing_last_name", @user.billing_last_name, size: 20 %><br></br>
       
         <%= label_tag "billing_address1", "Street address" %><br>
-        <%= text_field_tag "billing_address1", @user.billing_address1, size: 20 %></i><br></br>
+        <%= text_field_tag "billing_address1", @user.billing_address1, size: 20 %><br></br>
       
         <%= label_tag "billing_address2", "Street address (continued)" %><br>
-        <%= text_field_tag "billing_address2", @user.billing_address2, size: 20 %></i><br></br>
+        <%= text_field_tag "billing_address2", @user.billing_address2, size: 20 %><br></br>
       
         <%= label_tag "billing_city", "City" %><br>
-        <%= text_field_tag "billing_city", @user.billing_city, size: 20 %></i><br></br>
+        <%= text_field_tag "billing_city", @user.billing_city, size: 20 %><br></br>
       
-        TO DO - State drop down select <br><br>
-     
+        <%= label_tag "billing_state", "State" %><br>
+        <%= select_tag :billing_state, options_for_select(us_states, @user.billing_state) %><br></br>
+       
         <%= label_tag "billing_zip", "Zip Code" %><br>
-        <%= text_field_tag "billing_zip", @user.billing_zip, size: 20 %></i><br></br>
+        <%= text_field_tag "billing_zip", @user.billing_zip, size: 20 %><br></br>
       
         <%= label_tag "billing_phone_number", "Phone number" %><br>
-        <%= text_field_tag "billing_phone_number", @user.billing_phone_number, size: 20 %></i><br></br>
+        <%= text_field_tag "billing_phone_number", @user.billing_phone_number, size: 20 %><br></br>
     
         <%= submit_tag "Continue" %>
     </h4> 
