ATSrails_views and controller_finished shipping and billing information

--- a/app/views/user/ship_bill_same.html.erb
+++ b/app/views/user/ship_bill_same.html.erb
@@ -1,16 +1,11 @@
 <%= form_tag "/user/ship_bill_info_put", method: "PUT" do %>
 
-  <h4> Is your billing information then same as shipping?
-  <%= submit_tag "yes" %>
-      <%= submit_tag "no" %></h4>
-
-  
 <% if @error != nil %>
   <h2 style="color: rgb(156, 18, 18)"><%= @error %></h2>
 <% end %>
 
-<div class="row">
-  <div class="col-md-5 pull-left">
+<div class="row pad">
+  <div class="col-md-4 pull-left">
     <h4 style="color: rgba(3, 3, 100, 0.8)">
      
         <%= label_tag "shipping_first_name", "First name" %><br>
@@ -24,7 +19,9 @@
       
         <%= label_tag "shipping_address2", "Street address (continued)" %><br>
         <%= text_field_tag "shipping_address2", @user.shipping_address2, size: 20 %><br></br>
-      
+  </div>
+  <div class="col-md-4 pull-left">
+    <h4 style="color: rgba(3, 3, 100, 0.8)">
         <%= label_tag "shipping_city", "City" %><br>
         <%= text_field_tag "shipping_city", @user.shipping_city, size: 20 %><br></br>
         
@@ -36,36 +33,7 @@
       
         <%= label_tag "shipping_phone_number", "Phone number" %><br>
         <%= text_field_tag "shipping_phone_number", @user.shipping_phone_number, size: 20 %><br></br>
-    </h4> 
-  </div>
-  
-  <div class="col-md-7 pull-right">
-    <h4 style="color: #550808">
-      
-        <%= label_tag "billing_first_name", "First name" %><br>
-        <%= text_field_tag "billing_first_name", @user.billing_first_name, size: 20 %><br></br>
-      
-        <%= label_tag "billing_last_name", "Last name" %><br>
-        <%= text_field_tag "billing_last_name", @user.billing_last_name, size: 20 %><br></br>
-      
-        <%= label_tag "billing_address1", "Street address" %><br>
-        <%= text_field_tag "billing_address1", @user.billing_address1, size: 20 %><br></br>
-      
-        <%= label_tag "billing_address2", "Street address (continued)" %><br>
-        <%= text_field_tag "billing_address2", @user.billing_address2, size: 20 %><br></br>
-      
-        <%= label_tag "billing_city", "City" %><br>
-        <%= text_field_tag "billing_city", @user.billing_city, size: 20 %><br></br>
-      
-        <%= label_tag "billing_state", "State" %><br>
-        <%= select_tag :billing_state, options_for_select(us_states, @user.billing_state) %><br></br>
        
-        <%= label_tag "billing_zip", "Zip Code" %><br>
-        <%= text_field_tag "billing_zip", @user.billing_zip, size: 20 %><br></br>
-      
-        <%= label_tag "billing_phone_number", "Phone number" %><br>
-        <%= text_field_tag "billing_phone_number", @user.billing_phone_number, size: 20 %><br></br>
-    
         <%= submit_tag "Continue" %>
     </h4> 
   </div>
