--- a/app/views/user/edit.html.erb
+++ b/app/views/user/edit.html.erb
@@ -1,5 +1,4 @@
-<%= form_tag "/user/:id", method: "PUT" do %>
-
+<%= form_tag user_update_path, method: "PUT" do %>
 
 <% if @error != nil %>
   <h2 style="color: rgb(156, 18, 18)"><%= @error %></h2>
