--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -4,13 +4,13 @@
 <div class="pad">
 <div class="row">
   <div class="col-md-6">
-  <h4> Enter username and password </h4>
+  <h4><i>Enter username and password</i></h4>
     <h3>
-      <%= label_tag "username", "" %><br>
-      <%= text_field_tag "username", "", size: 20 %><br>
+      <%= label_tag :username %><br>
+      <%= text_field_tag :username, "", size: 20 %><br>
 
-      <%= label_tag "password", "" %><br>
-      <%= password_field_tag %> 
+      <%= label_tag :password %><br>
+      <%= password_field_tag :password %> 
     </h3>
   </div>
     </div> 
@@ -18,6 +18,7 @@
       
       <%= submit_tag "Sign in", size: 40 %>
       <%= submit_tag "Create account", size: 40 %>
+      <a href="/user/email">Forgot Password</a>
 </div>
 </div>
 
