ATSrail_fixed route problem for ship_update

--- a/app/views/layouts/_show_product.html.erb
+++ b/app/views/layouts/_show_product.html.erb
@@ -24,10 +24,8 @@
           <% if p.quantity == 0 %>
             <i> This item is currently out of stock. </i>
           <% else %>
-            <%= form_tag  do %>
-            <!-- <%= submit_tag "Add to Cart" %> --!>
-            <% end %>
-            <% end %>
+    *****TODO****<%= submit_tag "Add to Cart" %>
+          <% end %>
          </td>
             <% end %>   
     </table> 
