--- a/app/views/user/ship_bill_same.html.erb
+++ b/app/views/user/ship_bill_same.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag "/user/ship_bill_info_put", method: "PUT" do %>
+<%= form_tag ship_update_path, method: "PUT" do %>
 
 <% if @error != nil %>
   <h2 style="color: rgb(156, 18, 18)"><%= @error %></h2>
